--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="<%= assetPrefix %>/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Myun" />
+    <meta name="description" content="从思路到实体的跨越，让我们直接为您创建专业Excel文件" />
+    <meta name="description" title="SheetTalk" />
     <meta name="google" content="notranslate" />
     <meta name="theme-color" content="#000000" />
 <!-- Tailwind CSS v3 -->
