--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="icon" href="<%= assetPrefix %>/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <meta name="description" content="从思路到实体的跨越，让我们直接为您创建专业Excel文件" />
     <meta name="description" title="SheetTalk" />
     <meta name="google" content="notranslate" />
