--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <link rel="icon" href="<%= assetPrefix %>/favicon.ico" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <meta name="description" content="从思路到实体的跨越，让我们直接为您创建专业Excel文件" />
-    <meta name="description" title="SheetTalk" />
     <meta name="google" content="notranslate" />
     <meta name="theme-color" content="#000000" />
+    <title>SheetTalk</title>
 <!-- Tailwind CSS v3 -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- Font Awesome -->
