--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <link rel="icon" href="<%= assetPrefix %>/favicon.ico" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
-    <meta name="description" content="从思路到实体的跨越，让我们直接为您创建专业Excel文件" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="从思路到实体的跨越，让我们直接为您创建专业Excel文件,自动生成Excel" />
     <meta name="google" content="notranslate" />
     <meta name="theme-color" content="#000000" />
-    <title>SheetTalk</title>
+    <meta name="description" content="高顿教育集团，中国财经教育创导者。目前，已在全球50多座城市开设近150家分校及学习中心，累计获得百余项荣誉。加入高顿，与全球600万同学一起实现梦想的职业生涯！">
+    <meta name="keywords" content="高顿教育,高顿网校,会计网校,ACCA考试,CFA考试,CMA考试,CPA考试,AICPA考试,FRM考试,证券从业资格考试,期货从业资格考试,银行从业资格考试,会计职称考试,注册会计师,注册会计师考试,注册税务师考试,审计师考试">
+    <title>SheetTalk-高顿教育</title>
 <!-- Tailwind CSS v3 -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- Font Awesome -->
